# Beacon

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
BeaconClient/: BeaconClient.cpp  BeaconClient.h  CMakeLists.txt
BeaconServer/: BeaconServer.cpp  BeaconServer.h  CMakeLists.txt
